* NunitExtensions.cs: Add Nunit extensions
* LoopBack.Sdk.Xamarin.Tests.csproj:

--- a/src/LoopBack.Sdk.Xamarin.Tests/LoopBack.Sdk.Xamarin.Tests.csproj
+++ b/src/LoopBack.Sdk.Xamarin.Tests/LoopBack.Sdk.Xamarin.Tests.csproj
@@ -64,10 +64,14 @@
     <Compile Include="RestAdapterTests.cs" />
     <Compile Include="SampleModel.cs" />
     <Compile Include="ModelRepositoryTests.cs" />
+    <Compile Include="Extensions\NunitExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Extensions\" />
   </ItemGroup>
 </Project>
