--- a/src/LoopBack.Sdk.Xamarin/LoopBack.Sdk.Xamarin.csproj
+++ b/src/LoopBack.Sdk.Xamarin/LoopBack.Sdk.Xamarin.csproj
@@ -30,11 +30,13 @@
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="RestAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Model.cs" />
-    <Compile Include="ModelRepository.cs" />
-    <Compile Include="User.cs" />
+    <Compile Include="Remooting\Adapters\RestAdapter.cs" />
+    <Compile Include="Loopback\AccessToken.cs" />
+    <Compile Include="Loopback\Model.cs" />
+    <Compile Include="Loopback\ModelRepository.cs" />
+    <Compile Include="Loopback\User.cs" />
+    <Compile Include="Remooting\VirtualObject.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Threading.Tasks">
@@ -74,4 +76,9 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
+  <ItemGroup>
+    <Folder Include="Loopback\" />
+    <Folder Include="Remooting\" />
+    <Folder Include="Remooting\Adapters\" />
+  </ItemGroup>
 </Project>
