--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,7 @@ _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
 /src/_NCrunch_FunnyBus/
+
+#Node Modules
+node_modules/
+LoopBack.Sdk.Xamarin.sln.ide/
