--- a/src/LoopBack.Sdk.Xamarin/packages.config
+++ b/src/LoopBack.Sdk.Xamarin/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FubarCoder.RestSharp.Portable" version="1.7.0" targetFramework="portable-net40+win" />
-  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="portable-net40+win" />
-  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="portable-net40+win" />
-  <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="portable-net40+win" />
-  <package id="Newtonsoft.Json" version="6.0.5" targetFramework="portable-net40+win" />
+  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="portable-net40+win" requireReinstallation="True" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="portable-net40+win" requireReinstallation="True" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable-net45+win" />
+  <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="portable-net45+win" />
+  <package id="modernhttpclient" version="2.1.2" targetFramework="portable-net45+win" />
+  <package id="Newtonsoft.Json" version="6.0.6" targetFramework="portable-net45+win" />
 </packages>
