--- a/src/LoopBack.Sdk.Xamarin/LoopBack.Sdk.Xamarin.csproj
+++ b/src/LoopBack.Sdk.Xamarin/LoopBack.Sdk.Xamarin.csproj
@@ -38,6 +38,7 @@
     <Compile Include="Loopback\ContainerRepository.cs" />
     <Compile Include="Loopback\File.cs" />
     <Compile Include="Loopback\FileRepository.cs" />
+    <Compile Include="Loopback\ISharedReferencesService.cs" />
     <Compile Include="Loopback\LocalInstallation.cs" />
     <Compile Include="Loopback\RestAdapter.cs" />
     <Compile Include="Loopback\RestRepository.cs" />
