--- a/src/LoopBack.Sdk.Xamarin.Tests/packages.config
+++ b/src/LoopBack.Sdk.Xamarin.Tests/packages.config
@@ -1,11 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <packages>
-  <package id="FubarCoder.RestSharp.Portable" version="1.7.0" targetFramework="net45" />
+  <package id="AutoFixture" version="3.21.0" targetFramework="net45" />
+  <package id="FluentAssertions" version="3.2.1" targetFramework="net45" />
+  <package id="Humanizer" version="1.29.0" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net45" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net45" />
+  <package id="modernhttpclient" version="2.1.2" targetFramework="net45" />
   <package id="Moq" version="4.2.1409.1722" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
   <package id="NUnit" version="2.6.3" targetFramework="net45" />
+  <package id="PCLStorage" version="1.0.0" targetFramework="net45" />
+  <package id="Splat" version="1.5.1" targetFramework="net45" />
 </packages>
