--- a/src/LoopBack.Sdk.Xamarin/LoopBack.Sdk.Xamarin.csproj
+++ b/src/LoopBack.Sdk.Xamarin/LoopBack.Sdk.Xamarin.csproj
@@ -57,7 +57,7 @@
     <Compile Include="Remooting\Adapters\StreamParam.cs" />
     <Compile Include="Remooting\IRepository.cs" />
     <Compile Include="Remooting\Repository.cs" />
-    <Compile Include="Remooting\VirtualObject.cs" />
+    <Compile Include="Remooting\RemoteClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Humanizer">
