--- a/src/LoopBack.Sdk.Xamarin.Android.Tests/LoopBack.Sdk.Xamarin.Android.Tests.csproj
+++ b/src/LoopBack.Sdk.Xamarin.Android.Tests/LoopBack.Sdk.Xamarin.Android.Tests.csproj
@@ -37,6 +37,7 @@
     <Compile Include="Test.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
