--- a/src/LoopBack.Sdk.Xamarin.Tests/packages.config
+++ b/src/LoopBack.Sdk.Xamarin.Tests/packages.config
@@ -5,6 +5,7 @@
   <package id="Humanizer" version="1.31.0" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net45" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net45" />
   <package id="modernhttpclient" version="2.1.4" targetFramework="net45" />
   <package id="Moq" version="4.2.1409.1722" targetFramework="net45" />
