--- a/src/LoopBack.Sdk.Xamarin.iOS/LoopBack.Sdk.Xamarin.iOS.csproj
+++ b/src/LoopBack.Sdk.Xamarin.iOS/LoopBack.Sdk.Xamarin.iOS.csproj
@@ -34,4 +34,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
+  <Import Project="..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
