Move extensions to Extensions folder

--- a/src/LoopBack.Sdk.Xamarin/LoopBack.Sdk.Xamarin.csproj
+++ b/src/LoopBack.Sdk.Xamarin/LoopBack.Sdk.Xamarin.csproj
@@ -32,8 +32,8 @@
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Common\DictionaryExtensions.cs" />
-    <Compile Include="Common\StringExtensions.cs" />
+    <Compile Include="Extensions\DictionaryExtensions.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Loopback\AccessTokenRepository.cs" />
     <Compile Include="Loopback\Container.cs" />
     <Compile Include="Loopback\ContainerRepository.cs" />
