--- a/tests/LoopBack.Sdk.Xamarin.Tests/LoopBack.Sdk.Xamarin.Tests.csproj
+++ b/tests/LoopBack.Sdk.Xamarin.Tests/LoopBack.Sdk.Xamarin.Tests.csproj
@@ -76,12 +76,12 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Remooting\ContractClass.cs" />
-    <Compile Include="Remooting\RestAdapterTests.cs" />
-    <Compile Include="Remooting\RestContractTests.cs" />
-    <Compile Include="Remooting\SimpleClass.cs" />
-    <Compile Include="Remooting\DummyContextImpl.cs" />
-    <Compile Include="Remooting\TestUtil.cs" />
+    <Compile Include="Remoting\ContractClass.cs" />
+    <Compile Include="Remoting\RestAdapterTests.cs" />
+    <Compile Include="Remoting\RestContractTests.cs" />
+    <Compile Include="Remoting\SimpleClass.cs" />
+    <Compile Include="Remoting\DummyContextImpl.cs" />
+    <Compile Include="Remoting\TestUtil.cs" />
     <Compile Include="TestBase.cs" />
     <Compile Include="Extensions\NunitExtensions.cs" />
     <Compile Include="Extensions\MoqExtensions.cs" />
